# lfa-legacy-go-automated

./: .env.postgres  .gitignore  API_DEVELOPER_GUIDE.md  AUTOMATION-DIAGNOSTIC-REPORT.md  CLAUDE-CODE-HANDOFF-COMPLETE.md  CLAUDE_AINAK.txt  FINAL_24H_MISSION_REPORT.md  FINAL_DEMO_SCRIPT_COMPLETE.md  FRONTEND_INTEGRATION_COMPLETE.md  INFINITE-LOOP-ANALYSIS.md  INFINITE_LOOP_FIX_COMPLETE.md  INFINITE_LOOP_FIX_COMPLETE_FINAL.md  LFA_Legacy_GO_Postman_Collection.json  LFA_Legacy_GO_Postman_Environment.json  NAVIGATION_FIXES_COMPLETE.md  PHASE_4.2_FINAL_QA_CERTIFICATION_REPORT.md  PHASE_5_QUALITY_IMPROVEMENTS_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_REPORT.md  QUALITY_ASSURANCE_REPORT.md  QUALITY_IMPROVEMENT_PLAN.md  RAILWAY_DEPLOYMENT_COMMANDS.md  README.md  REFRESH-LOOP-EMERGENCY-FIX.md  SHAREHOLDER_DEMO_SCRIPT.md  ULTIMATE_DEPLOY.sh  VALIDATE_DEPLOYMENT.sh  WEEK_3_PERFORMANCE_COMPLETION_REPORT.md  WEEK_6_PERFORMANCE_REPORT.md  WEEK_7_POSTGRESQL_MIGRATION_COMPLETED.md  app-postgres.yaml  app.yaml  asset-manifest.json  auto-deploy-backend.sh  auto-deploy-frontend.sh  backend_debug.sh  browser-validation-test.html  check-backend-logs.sh  cleanup_console_logs.sh  cloud-run-postgres.env  (+88 more)
backend/: .env  .env.deploy  .env.example  .env.production.template  .gitignore  COMPLETE_AUTOMATION.sh  Dockerfile  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_2.3_ADVANCED_CACHING_COMPLETION_REPORT.md  PHASE_3.1_TEST_COVERAGE_ANALYSIS.md  PHASE_3.1_TEST_COVERAGE_COMPLETION_REPORT.md  PHASE_3.2_TEST_IMPROVEMENTS_REPORT.md  PHASE_3.3_FINAL_TESTING_SUMMARY.md  Procfile  (+92 more)
(+512 files in other folders)
